manifest/challenge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge
spec:
  selector:
    matchLabels:
      app: challenge
  replicas: 1
  template:
    metadata:
      labels:
        app: challenge
    spec:
      containers:
      - name: challenge
        image: leocordoba1902/challenge:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: challenge
  labels:
    run: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: challenge
