manifest/defaultback-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge
spec:
  tls:
    secretName: challenge-tls
  defaultBackend:
    service:
      name: challenge
      port:
        number: 80
